--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,16 @@
-body{
-    background-image: linear-gradient(to bottom, rgba(17, 17, 16, 0.877), rgba(13, 13, 14, 0.938)),url(https://i.pinimg.com/originals/83/75/39/8375390d41aa92a47bed9c5f4fb410ea.jpg);
+.landing{
+    background-image: url();
+    text-align: center;
+    background-repeat: no-repeat;
+}
+
+
+
+
+/* body{
     background-repeat: no-repeat;
     background-size: initial;
+    background-image: linear-gradient( rgba(17, 17, 16, 0.877), rgba(13, 13, 14, 0.938)),url(https://i.pinimg.com/originals/83/75/39/8375390d41aa92a47bed9c5f4fb410ea.jpg);
 }
 h1 {
     font-size: 1.5em;
@@ -11,4 +20,4 @@ h1 {
     font-size: xx-large;
     text-align: center;
   }
-  
+   */
