--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,18 @@ body{
     font-family: serif;
     padding-top: 5%;
 }
+.services h4{
+    font-family: serif;
+    font-size: 25px;
+    padding-left: 33%;
+}
 .row{
     display: flex;
+    justify-content: space-around;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+.row img{
+    width: 300px;
+    height: 300px;
 }
