--- a/css/styles.css
+++ b/css/styles.css
@@ -64,4 +64,24 @@ body{
 .row img{
     width: 300px;
     height: 300px;
+    background: #000000;
+    opacity: 0.25;
+    max-width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+
+}
+.row h2{
+    font-family: 'Raleway', Arial, sans-serif;
+}
+.row figcaptio{
+    position: absolute;
+    top: 50%;
+    left: 30px;
+    right: 30px;
+    -webkit-transform: rotate(0deg) translateY(-50%) scale(1);
+    transform: rotate(0deg) translateY(-50%) scale(1);
+    -webkit-transform-origin: center 0;
+    transform-origin: center 0;
 }
