--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,6 @@ body{
     width: 300px;
     height: 300px;
     background: #000000;
-    opacity: 0.25;
     max-width: 100%;
     position: relative;
     top: 0;
@@ -73,15 +72,76 @@ body{
 
 }
 .row h2{
-    font-family: 'Raleway', Arial, sans-serif;
+    text-align: center;
 }
-.row figcaptio{
-    position: absolute;
-    top: 50%;
-    left: 30px;
-    right: 30px;
-    -webkit-transform: rotate(0deg) translateY(-50%) scale(1);
-    transform: rotate(0deg) translateY(-50%) scale(1);
-    -webkit-transform-origin: center 0;
-    transform-origin: center 0;
+
+/* contacts section */
+.contacts h1{
+    text-align: center;
+    font-size: 40px;
+    font-family: serif;
+    padding-top: 2%;
+}
+.contacts p{
+    font-family: serif;
+    font-size: 25px;
+    text-align: center;
+}
+.contacts{
+    background-image: url(https://expertphotography.com/wp-content/uploads/2011/10/canon-vs.nikon-image2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh;
+    margin-bottom: 50px;
+}
+.container-fluid{
+    background-color: rgba(0, 0, 0, 0.705);
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-bottom: 10px;
+    padding-left: 6%;
+    color: #5907a5f5;
+}
+input{
+    position : relative;
+    width  : 740px;
+    height : 498px;
+    margin : 0 auto;
+    padding: 1em;
+    box-sizing: border-box;
+    display  : grid;
+    grid-gap : 20px;
+    grid-template-columns : repeat(2, 1fr);
+    grid-template-rows    : 10em 1em 1em 1em;
+}
+h1 {
+    font : 1em "typewriter", monospace;
+    align-self : end;
+  }
+  
+#message {
+     grid-row: 1 / 5;
+  }
+  
+#name, #email {
+     display: flex;
+  }
+  input, textarea {
+    font    : 1.4em/1.5em "handwriting", cursive, sans-serif;
+    border  : 2px solid black;
+    padding : 0 10px;
+    margin  : 0;
+    width   : 80%;
+    height: 20%;
+    background : transparent;
+    color: white; 
+    border-radius: 5px;
+}
+textarea{
+    width: 50%;
+    padding: 40px;
+    margin: 40px;
+    margin-left: 14%;
+    background: white;
+
 }
