--- a/css/styles.css
+++ b/css/styles.css
@@ -158,3 +158,22 @@ input{
     height: 20%;
     margin-left: 35%;
 }
+
+#social{
+    padding-top: 50px;
+}
+#social1{
+    padding-left: 500px;
+}
+#social9{
+    padding-right: 500px;
+}
+.footer{
+    padding-left: 45%;
+    font-size: 23px;
+}
+.footer p{
+    padding-left: 5%;
+    font-size:20px;
+    font-weight: 700;
+}
