--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,22 @@ input{
     margin-left: 35%;
 }
 
-#social1 #social2{
-    margin-left: 30%;
-    margin-right: 30%;
+.social img{
+    width: 50px;
+    height: 50px;
+}
+.social{
+    margin-left: 40%;
+
+}
+.footer{
+    margin-left: 45%;
+}
+#social3{
+    width: 60px;
+    height: 60px;
+}
+.icons{
+    background-color: black;
+    height: 70px;
 }
