--- a/css/styles.css
+++ b/css/styles.css
@@ -1,154 +1,127 @@
-body{
-    overflow-y: scroll;
-    overflow-x: hidden;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+*{
+   font-family: 'Poppins', sans-serif;
+   scroll-behavior: smooth;
+   margin-top: 0%;
+   width: 100vvw;
+   margin-left: 0;
 }
 .landing{
     background-image: url(https://i.pinimg.com/originals/83/75/39/8375390d41aa92a47bed9c5f4fb410ea.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    padding-top: 0;
+    height: 80vh;
+    max-width: 100%;
 }
-.landing h1 {
-    font-size: 4.5em;
+.navbar{
     color: #5907a5f5;
     background-image: none;
     background-color: transparent;
-    font-size: 55px;
-    text-align: center;
+    font-size:18px;
     background-color: black;
     padding: 30px;
-    padding-top: 0;
-    font-family: serif;
+    padding-top: 50px;
   }
+nav ul li{
+    display: inline-block;
+    padding-left: 20px;
+}
 
 .landing p{
-    font-size: 30px;
+    font-size: 18px;
     padding-right: 50%;
     padding-top: 20PX;
   }
 
 /* about us section */
+.about {
+    box-sizing: content-box;
+}
 .about h1{
     text-align: center;
-    font-size: 40px;
-    font-family: serif;
+    font-size: 30px;
     padding-top: 5%;
 }
 .about p{
-    font-size: 25px;
+    font-size: 17px;
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
-    font-family: serif;
 }
 
 /* services section */
+.services{
+    align-items: center;
+}
 .services h1{
     text-align: center;
-    font-size: 40px;
-    font-family: serif;
+    font-size: 20px;
     padding-top: 5%;
 }
 .services h4{
-    font-family: serif;
-    font-size: 25px;
+    font-size: 17px;
     padding-left: 33%;
 }
 .row{
-    display: flex;
-    justify-content: space-around;
-    margin-left: 3%;
-    margin-right: 3%;
+    margin-left: 130px;
 }
 .row img{
-    width: 300px;
-    height: 300px;
-    background: #000000;
-    max-width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-
-}
+    width: 230px;
+    height: 200px;
+ }
 .row h2{
     text-align: center;
+}
+.row h6{
+    text-align: center;
+}
+.column{
+    margin: 30px;
+    width: 200px;
+    height: 200px;
+    border: 1px solid purple;
 }
 
 /* contacts section */
 .contacts h1{
     text-align: center;
-    font-size: 40px;
-    font-family: serif;
+    font-size: 20px;
     padding-top: 2%;
 }
 .contacts p{
-    font-family: serif;
-    font-size: 25px;
+    font-size: 18px;
     text-align: center;
 }
 .contacts{
     background-image: url(https://expertphotography.com/wp-content/uploads/2011/10/canon-vs.nikon-image2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 70vh;
-    margin-bottom: 50px;
-    border-radius: 10px;
+    height: 80vh;
 }
-.container-fluid{
-    background-color: rgba(0, 0, 0, 0.705);
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-bottom: 10px;
-    padding-left: 6%;
-    color: #5907a5f5;
+.container{
+    background-color: rgba(0, 0, 0, 0.699);
+    color: #a971ddf5;
 }
 input{
-    position : relative;
-    width  : 740px;
-    height : 498px;
-    margin : 0 auto;
-    padding: 1em;
     box-sizing: border-box;
-    display  : grid;
-    grid-gap : 20px;
-    grid-template-columns : repeat(2, 1fr);
-    grid-template-rows    : 10em 1em 1em 1em;
 }
-h1 {
-    font : 1em "typewriter", monospace;
-    align-self : end;
-  }
-  
-#message {
-     grid-row: 1 / 5;
-  }
-  
-#name, #email {
-     display: flex;
-  }
-  input, textarea {
-    font    : 1.4em/1.5em "handwriting", cursive, sans-serif;
-    border  : 2px solid black;
-    padding : 0 10px;
-    margin  : 0;
-    width   : 80%;
-    height: 12%;
-    background : transparent;
-    color: black; 
-    border-radius: 5px;
+#email{
+    margin-top: 10px;
 }
 textarea{
+    color: white;
+    padding-top: 2%;
     width: 50%;
-    padding: 0px;
-    margin: 40px;
+    margin: 10px;
     margin-left: 14%;
-    background: white;
+    background-color: rgba(0, 0, 0, 0.600);
 }
 input{
-    width: 60%;
+    color: white;
+    width: 50%;
     height: 20%;
-    background: white;
+    background-color: rgba(0, 0, 0, 0.600);
     margin-left: 14%;
     padding-top: 2%;
 }
@@ -157,24 +130,6 @@ input{
     width: 10%;
     height: 20%;
     margin-left: 35%;
-}
-
-.social img{
-    width: 50px;
-    height: 50px;
-}
-.social{
-    margin-left: 40%;
-
-}
-.footer{
-    margin-left: 45%;
-}
-#social3{
-    width: 60px;
-    height: 60px;
-}
-.icons{
-    background-color: black;
-    height: 70px;
+    padding: 10px 15px;
+    border-radius: 15%;
 }
